--- a/resolution.tex
+++ b/resolution.tex
@@ -158,9 +158,9 @@ where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor
 \label{fig:4zonal}
 \end{figure}
 
-The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep Tropics. Figure~\ref{fig:4zonal}c shows the climatological, zonal-mean latent heat flux in the simulations, which is expected to contribute positively to the component of dilute CAPE associated with the thermodynamic state of boundary layer parcels \citep{Z2002JGR}. In the deep Tropics, latent heat fluxes are small, and the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), consistent with the idea that subsiding motion actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep Tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
+The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep tropics. Figure~\ref{fig:4zonal}c shows the climatological, zonal-mean latent heat flux in the simulations, which is expected to contribute positively to the component of dilute CAPE associated with the thermodynamic state of boundary layer parcels \citep{Z2002JGR}. In the deep tropics, latent heat fluxes are small, and the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), consistent with the idea that subsiding motion actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
 
-Table~\ref{tbl:table2} shows the fractional contribution of the deep Tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) between convective and stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep Tropics (except in going from $ne20$ to $ne30$, where deep Tropical convective precipitation rates increase with resolution due to an extremely wide double-ITCZ in the $ne20$ simulation that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitudes boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occur in this region (again, ignoring $ne30-ne20$). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
+Table~\ref{tbl:table2} shows the fractional contribution of the deep tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) between convective and stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep tropics (except in going from $ne20$ to $ne30$, where deep Tropical convective precipitation rates increase with resolution due to an extremely wide double-ITCZ in the $ne20$ simulation that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitudes boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occur in this region (again, ignoring $ne30-ne20$). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
 
  \begin{table}
  \caption{Fractional contribution of latitude bands $\pm 10^{\circ}$ and $\pm 15^{\circ}$ to changes in global mean precipitation with resolution. The grid headers refer to differences with respect to the next lowest grid resolution, e.g., $ne30 = ne30-ne20$, $ne40=ne40-ne30$, etc..., and computed through remapping all data to the $ne20$ grid.}
@@ -182,29 +182,29 @@ Table~\ref{tbl:table2} shows the fractional contribution of the deep Tropics to 
  \label{tbl:table2}
  \end{table}
 
-To estimate the dilute CAPE values associated with subsiding motion in the deep Tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$, the mass-weighted vertical integral of $\omega$, is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. 
+To estimate the dilute CAPE values associated with subsiding motion in the deep tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$, the mass-weighted vertical integral of $\omega$, is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. 
 
-Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep Tropics, with resolution. The ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE value computed for mean conditions over the entire deep Tropics decrease monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep Tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in CAPE for the entire deep Tropics, verified by the similar CAPE values derived through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
+Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep tropics, with resolution. The ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE value computed for mean conditions over the entire deep tropics decrease monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in CAPE for the entire deep tropics, verified by the similar CAPE values derived through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape.pdf}\\
 \end{center}
-\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep Tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep Tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep Tropics, (d) Same as (c) but using the mean moisture profile for the entire deep Tropics. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
+\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep tropics, (d) Same as (c) but using the mean moisture profile for the entire deep tropics. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
 \label{fig:cape}
 \end{figure}
 
-Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep Tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep Tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying patterns is consistent with the effects of subsidence, whose motion produces adiabatic warming and advection of drier, upper-troposphere air downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the parcel temperature reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into a rising air parcel reduces the moisture available to warm the parcel through latent heating \citep{RB1992JAS}. 
+Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying patterns is consistent with the effects of subsidence, whose motion produces adiabatic warming and advection of drier, upper-troposphere air downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the parcel temperature reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into a rising air parcel reduces the moisture available to warm the parcel through latent heating \citep{RB1992JAS}. 
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_profiles.pdf}\\
 \end{center}
-\caption{Time mean (a) temperature and (b) specific humidity profiles of subsiding grid cells in the deep Tropics ($\pm 10^{\circ}$ latitude) in the convergence experiment, presented as anomalies from the mean temperature and specific humidity of the entire deep Tropics in each simulation.}
+\caption{Time mean (a) temperature and (b) specific humidity profiles of subsiding grid cells in the deep tropics ($\pm 10^{\circ}$ latitude) in the convergence experiment, presented as anomalies from the mean temperature and specific humidity of the entire deep tropics in each simulation.}
 \label{fig:profiles}
 \end{figure}
 
-An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through computing dilute CAPE using the mean specific humidity of subsiding regions in the deep Tropics, but setting the temperature profile to the mean profile for the entire deep Tropics, one can isolate the role of changes in moisture in subsiding regions on the dilute CAPE calculation, while doing the reverse isolates the influence of changes in temperature. Figure~\ref{fig:profiles}c shows the influence of moisture of subsiding/ascending regions on dilute CAPE, and Figure~\ref{fig:profiles}d the influence of temperature. The first order cause for the reduction of dilute CAPE is clearly do to the reduction (increase) in moisture in subsiding (ascending) region, while temperature has a smaller, second order influence on the dilute CAPE changes. This analysis indicates that the drying of the deep Tropics with resolution manifests through an increase in occurrence of subsiding motion with resolution, which reduces the frequency the ZM scheme is active through reducing the frequency the dilute CAPE threshold for convection occurs.
+An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through computing dilute CAPE using the mean specific humidity of subsiding regions in the deep tropics, but setting the temperature profile to the mean profile for the entire deep tropics, one can isolate the role of changes in moisture in subsiding regions on the dilute CAPE calculation, while doing the reverse isolates the influence of changes in temperature. Figure~\ref{fig:profiles}c shows the influence of moisture of subsiding/ascending regions on dilute CAPE, and Figure~\ref{fig:profiles}d the influence of temperature. The first order cause for the reduction of dilute CAPE is clearly do to the reduction (increase) in moisture in subsiding (ascending) region, while temperature has a smaller, second order influence on the dilute CAPE changes. This analysis indicates that the drying of the deep tropics with resolution manifests through an increase in occurrence of subsiding motion with resolution, which reduces the frequency the ZM scheme is active through reducing the frequency the dilute CAPE threshold for convection occurs.
 
 \subsection{Vertical Velocities and the Drizzle Bias}
 
