--- a/resolution.tex
+++ b/resolution.tex
@@ -214,12 +214,20 @@ AGCMs are known to suffer from producing too much light rain, or drizzle, relati
 
 \subsection{Vertical Velocities and Stratiform Precipitation}
 
-\begin{figure}[t]
+\begin{figure}
+\begin{center}
+\noindent\includegraphics[width=20pc,angle=0]{figs/temp_mflux.pdf}\\
+\end{center}
+\caption{}
+\label{fig:mflux}
+\end{figure}
+
+\begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_pdecomp.pdf}\\
 \end{center}
 \caption{}
-\label{fig:prdecomp}
+\label{fig:pdecomp}
 \end{figure}
 
 \ack 
