--- a/resolution.tex
+++ b/resolution.tex
@@ -234,7 +234,9 @@ To unravel the contributions of $\omega$ and $q$ at the 850 hPa level, $\omega_{
 \begin{equation}
 \overline{R_{s}} = \sum_i \sum_j f \left( \omega_i , q_j \right) M \left( \omega_i , q_j \right) \label{eq:pdecomp}
 \end{equation}
-after \cite{TETAL2018CD}, and the subscript $850$ is dropped from $\omega$ and $q$ for brevity. Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution, and so Figure~\ref{fig:pdecomp} is a plot of the terms $M\left( \omega_i , q_j \right)$ and $f\left( \omega_i , q_j \right) \times M\left( \omega_i , q_j \right)$ for all resolutions, and in the $\pm 15^{\circ}$ latitude region. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. Larger $\omega$ values correspond to larger magnitude stratiform precipitation rates, which have larger space-time frequencies $f\left( \omega_i , q_j \right)$ at higher resolutions, explaining the increase in $\overline{R_{s}}$ with resolution in Table~\ref{tbl:table2}. Changes in the space-time frequency of the $q$ field contributes comparatively less to changes in stratiform precipitation.
+after \cite{TETAL2018CD}, and the subscript $850$ is dropped from $\omega$ and $q$ for brevity. 
+
+Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution. Figure~\ref{fig:pdecomp} is a plot of the terms $M\left( \omega_i , q_j \right)$ and $f\left( \omega_i , q_j \right) \times M\left( \omega_i , q_j \right)$ for all resolutions, and in the $\pm 15^{\circ}$ latitude region. The plots are computed using 6-hourly instantaneous output of $\omega_{i}$ and $q_{j}$, with 0.05 Pa/s and 0.4 g/kg bins. Values in  $\left( \omega_{i} , q_{j} \right)$ space are only shown for bins with $f \geq1 \times 10^{-5}$, a reasonable cut-off to a bins' contribution to $\overline{R_s}$. Larger $\omega$ values correspond to larger magnitude stratiform precipitation rates, which have larger space-time frequencies $f\left( \omega_i , q_j \right)$ at higher resolutions, explaining the increase in $\overline{R_{s}}$ with resolution in Table~\ref{tbl:table2}. Changes in the space-time frequency of the $q$ field contributes comparatively less to changes in stratiform precipitation.
 
 \begin{figure}
 \begin{center}
